[project]
name = "yankee"
version = "0.1.0"
description = "Stock research, charting, screening, signals, backtesting and tracking toolkit"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "plotly>=5.18",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
include = ["yankee*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
